--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 ### IntelliJ IDEA ###
-.idea
+.idea/
+*.iml
+target/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
@@ -30,3 +32,4 @@ bin/
 .DS_Store
 .idea/misc.xml
 .idea/modules.xml
+lesson.iml
